Modificaciones en secciones pagina principal

--- a/wp-content/themes/aravalli-business-child/style.css
+++ b/wp-content/themes/aravalli-business-child/style.css
@@ -39,3 +39,8 @@ Template: aravalli-business
 #certificates {
    padding-bottom: 0 !important;
 }
+
+.promostional-wrapper div {
+   margin-top: 0.5rem!important;
+   margin-bottom: 0.5rem!important;
+}
